--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>Stencil Component Starter</title>
-  <script src="/build/mycomponent.js"></script>
+  <script src="/build/capacitorgooglemaps.js"></script>
 
 </head>
 <body>
 
-  <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+	<div style="width:500px; height: 500px">
+		<capacitor-google-maps apikey="YOUR_API_KEY"></capacitor-google-maps>
+	</div>
 
 </body>
 </html>
